src/skeleton/_grid.css
/* ... */
.xs-ten[class*='column']          { width: calc((var(--column-width) * 10) - var(--gutter)); }
.xs-eleven[class*='column']       { width: calc((var(--column-width) * 11) - var(--gutter)); }
.xs-twelve[class*='column']       { width: calc((var(--column-width) * 12) - var(--gutter)); }

@media screen and (min-width: 35em) {
  [class*='column'] ~ [class*='column'] {
    margin-top: 0;
  }

  .one[class*='column']         { width: calc((var(--column-width) * 1) - var(--gutter)); }
  .two[class*='column']         { width: calc((var(--column-width) * 2) - var(--gutter)); }
  .three[class*='column'],
  .one-quarter[class*='column'] { width: calc((var(--column-width) * 3) - var(--gutter)); }
  .four[class*='column'],
  .one-third[class*='column']   { width: calc((var(--column-width) * 4) - var(--gutter)); }
  .five[class*='column']        { width: calc((var(--column-width) * 5) - var(--gutter)); }
  .six[class*='column'],
  .one-half[class*='column']    { width: calc((var(--column-width) * 6) - var(--gutter)); }
  .seven[class*='column']       { width: calc((var(--column-width) * 7) - var(--gutter)); }
  .eight[class*='column'],
  .two-thirds[class*='column']  { width: calc((var(--column-width) * 8) - var(--gutter)); }
  .nine[class*='column']        { width: calc((var(--column-width) * 9) - var(--gutter)); }
  .ten[class*='column']         { width: calc((var(--column-width) * 10) - var(--gutter)); }
  .eleven[class*='column']      { width: calc((var(--column-width) * 11) - var(--gutter)); }
  .twelve[class*='column']      { width: calc((var(--column-width) * 12) - var(--gutter)); }

  .offset-by-one[class*='column']         { margin-left: calc((var(--column-width) * 1) + (var(--gutter) / 2)); }
  .offset-by-two[class*='column']         { margin-left: calc((var(--column-width) * 2) + (var(--gutter) / 2)); }
  .offset-by-three[class*='column'],
  .offset-by-one-quarter[class*='column'] { margin-left: calc((var(--column-width) * 3) + (var(--gutter) / 2)); }
  .offset-by-four[class*='column'],
  .offset-by-one-third[class*='column']   { margin-left: calc((var(--column-width) * 4) + (var(--gutter) / 2)); }
  .offset-by-five[class*='column']        { margin-left: calc((var(--column-width) * 5) + (var(--gutter) / 2)); }
  .offset-by-six[class*='column'],
  .offset-by-one-half[class*='column']    { margin-left: calc((var(--column-width) * 6) + (var(--gutter) / 2)); }
  .offset-by-seven[class*='column']       { margin-left: calc((var(--column-width) * 7) + (var(--gutter) / 2)); }
  .offset-by-eight[class*='column'],
  .offset-by-two-thirds[class*='column']  { margin-left: calc((var(--column-width) * 8) + (var(--gutter) / 2)); }
  .offset-by-nine[class*='column']        { margin-left: calc((var(--column-width) * 9) + (var(--gutter) / 2)); }
  .offset-by-ten[class*='column']         { margin-left: calc((var(--column-width) * 10) + (var(--gutter) / 2)); }
  .offset-by-eleven[class*='column']      { margin-left: calc((var(--column-width) * 11) + (var(--gutter) / 2)); }


  .sm-one[class*='column']          { width: calc((var(--column-width) * 1) - var(--gutter)); }
  .sm-two[class*='column']          { width: calc((var(--column-width) * 2) - var(--gutter)); }
  .sm-three[class*='column'],
  .sm-one-quarter[class*='column']  { width: calc((var(--column-width) * 3) - var(--gutter)); }
  .sm-four[class*='column'],
  .sm-one-third[class*='column']    { width: calc((var(--column-width) * 4) - var(--gutter)); }
  .sm-five[class*='column']         { width: calc((var(--column-width) * 5) - var(--gutter)); }
  .sm-six[class*='column'],
  .sm-one-half[class*='column']     { width: calc((var(--column-width) * 6) - var(--gutter)); }
  .sm-seven[class*='column']        { width: calc((var(--column-width) * 7) - var(--gutter)); }
  .sm-eight[class*='column'],
  .sm-two-thirds[class*='column']   { width: calc((var(--column-width) * 8) - var(--gutter)); }
  .sm-nine[class*='column']         { width: calc((var(--column-width) * 9) - var(--gutter)); }
  .sm-ten[class*='column']          { width: calc((var(--column-width) * 10) - var(--gutter)); }
  .sm-eleven[class*='column']       { width: calc((var(--column-width) * 11) - var(--gutter)); }
  .sm-twelve[class*='column']       { width: calc((var(--column-width) * 12) - var(--gutter)); }

  .sm-offset-by-one[class*='column']          { margin-left: calc((var(--column-width) * 1) + (var(--gutter) / 2)); }
  .sm-offset-by-two[class*='column']          { margin-left: calc((var(--column-width) * 2) + (var(--gutter) / 2)); }
  .sm-offset-by-three[class*='column'],
  .sm-offset-by-one-quarter[class*='column']  { margin-left: calc((var(--column-width) * 3) + (var(--gutter) / 2)); }
  .sm-offset-by-four[class*='column'],
  .sm-offset-by-one-third[class*='column']    { margin-left: calc((var(--column-width) * 4) + (var(--gutter) / 2)); }
  .sm-offset-by-five[class*='column']         { margin-left: calc((var(--column-width) * 5) + (var(--gutter) / 2)); }
  .sm-offset-by-six[class*='column'],
  .sm-offset-by-one-half[class*='column']     { margin-left: calc((var(--column-width) * 6) + (var(--gutter) / 2)); }
  .sm-offset-by-seven[class*='column']        { margin-left: calc((var(--column-width) * 7) + (var(--gutter) / 2)); }
  .sm-offset-by-eight[class*='column'],
  .sm-offset-by-two-thirds[class*='column']   { margin-left: calc((var(--column-width) * 8) + (var(--gutter) / 2)); }
  .sm-offset-by-nine[class*='column']         { margin-left: calc((var(--column-width) * 9) + (var(--gutter) / 2)); }
  .sm-offset-by-ten[class*='column']          { margin-left: calc((var(--column-width) * 10) + (var(--gutter) / 2)); }
  .sm-offset-by-eleven[class*='column']       { margin-left: calc((var(--column-width) * 11) + (var(--gutter) / 2)); }
}
/* ... */

